--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (12.6) UNRELEASED; urgency=medium
+debhelper (12.6) experimental; urgency=medium
 
   [ Niels Thykier ]
   * dh_makeshlibs: Fix regression where versionless SONAMEs could
@@ -15,7 +15,7 @@ debhelper (12.6) UNRELEASED; urgency=medium
   * d/rules: Call dh_missing --fail-missing to catch bugs where files
     are not installed anywhere.
 
- -- Niels Thykier <niels@thykier.net>  Sun, 08 Sep 2019 05:59:42 +0000
+ -- Niels Thykier <niels@thykier.net>  Sat, 14 Sep 2019 06:37:44 +0000
 
 debhelper (12.5.4) unstable; urgency=medium
 
