--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (12.6.1) unstable; urgency=medium
+
+  * Upload to unstable now that libdebhelper-perl has been through
+    the NEW queue.
+
+ -- Niels Thykier <niels@thykier.net>  Sun, 15 Sep 2019 10:08:53 +0000
+
 debhelper (12.6) experimental; urgency=medium
 
   [ Niels Thykier ]
