--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (12.6.2) UNRELEASED; urgency=medium
+
+  [ Helmut Grohne ]:
+  * cmake buildsystem: Fix CMAKE_SYSTEM_PROCESSOR for 32bit arms.
+    (Closes: #941245)
+
+ -- Helmut Grohne <helmut@subdivi.de>  Fri, 27 Sep 2019 06:12:45 +0200
+
 debhelper (12.6.1) unstable; urgency=medium
 
   * Upload to unstable now that libdebhelper-perl has been through
