dh_installman: Avoid error messages when man-db is not present
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,10 @@
 debhelper (12.6.2) UNRELEASED; urgency=medium
 
+  [ Niels Thykier ]:
+  * dh_installman: Avoid error message when man-db is not unstalled
+    (only occurs in debhelper's own buid as man-db is a mandatory
+    dependency).
+
   [ Helmut Grohne ]:
   * cmake buildsystem: Fix CMAKE_SYSTEM_PROCESSOR for 32bit arms.
     (Closes: #941245)
