dh_installman: Use man-recode(1) when present
It is a lot faster for any package with a non-trivial amount of
manpages-

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,11 @@ debhelper (12.6.2) UNRELEASED; urgency=medium
   * dh_installman: Avoid error message when man-db is not unstalled
     (only occurs in debhelper's own buid as man-db is a mandatory
     dependency).
+  * dh_installman: Use man-recode(1) when available to massively
+    speed up re-encoding performance for any package with a non-
+    trivial amount of manpages.  Thanks to Robert Luberda for
+    reporting the issue and Colin Watson for writing man-recode
+    (Closes: #933576)
 
   [ Helmut Grohne ]:
   * cmake buildsystem: Fix CMAKE_SYSTEM_PROCESSOR for 32bit arms.
