Actively discourage (but no deprecate) c11
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -645,6 +645,14 @@ those ~5 years, this item have been removed rather than fixed.
 
 =item v11
 
+This mode is discouraged.
+
+The compat 11 is discouraged for new packages as it suffers from
+feature interaction between L<dh_installinit> and L<dh_installsystemd>
+causing services to not run correctly in some cases.  Please consider
+using compatibility mode 10 or 12 instead.  More details about the
+issue are available in Debian#887904.
+
 Changes from v10 are:
 
 =over 8
