--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,10 @@ debhelper (12.6.2) UNRELEASED; urgency=medium
     trivial amount of manpages.  Thanks to Robert Luberda for
     reporting the issue and Colin Watson for writing man-recode
     (Closes: #933576)
+  * debhelper.pod: Actively discourage compat 11 as it has an
+    issue that causes services not to start correctly in all cases
+    (e.g. install, remove-but-not-purge, install again), which
+    cannot be fixed.
 
   [ Helmut Grohne ]:
   * cmake buildsystem: Fix CMAKE_SYSTEM_PROCESSOR for 32bit arms.
