Add mailing list link to the c11 issue
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -651,7 +651,8 @@ The compat 11 is discouraged for new packages as it suffers from
 feature interaction between L<dh_installinit> and L<dh_installsystemd>
 causing services to not run correctly in some cases.  Please consider
 using compatibility mode 10 or 12 instead.  More details about the
-issue are available in Debian#887904.
+issue are available in Debian#887904 and
+L<https://lists.debian.org/debian-release/2019/04/msg01442.html>.
 
 Changes from v10 are:
 
