--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (12.6.2) UNRELEASED; urgency=medium
+debhelper (12.7) UNRELEASED; urgency=medium
 
   [ Niels Thykier ]:
   * dh_installman: Avoid error message when man-db is not unstalled
@@ -13,6 +13,10 @@ debhelper (12.6.2) UNRELEASED; urgency=medium
     issue that causes services not to start correctly in all cases
     (e.g. install, remove-but-not-purge, install again), which
     cannot be fixed.
+  * dh_auto_*: Support a new --reload-all-buildenv-variables
+    option for resetting the cache (of e.g. dpkg-buildflags).
+    This is needed by e.g. parted which does two builds with
+    different CFLAGS.
 
   [ Helmut Grohne ]:
   * cmake buildsystem: Fix CMAKE_SYSTEM_PROCESSOR for 32bit arms.
