--- a/debian/changelog
+++ b/debian/changelog
@@ -27,6 +27,12 @@ debhelper (12.7) UNRELEASED; urgency=medium
   * cmake buildsystem: Fix CMAKE_SYSTEM_PROCESSOR for 32bit arms.
     (Closes: #941245)
 
+  [ Niko Tyni ]
+  * Basic support cross building XS modules:
+    + perl_makemaker: run Makefile.PL with host arch Config.pm
+    + perl_build: run Build.PL and Build with host arch Config.pm
+    + dh_perl: scan host arch include directories for Perl plugins
+
  -- Helmut Grohne <helmut@subdivi.de>  Fri, 27 Sep 2019 06:12:45 +0200
 
 debhelper (12.6.1) unstable; urgency=medium
