dh_makeshlibs: Suggest --no-add-udeb for some cases
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,11 @@ debhelper (12.7) UNRELEASED; urgency=medium
     option for resetting the cache (of e.g. dpkg-buildflags).
     This is needed by e.g. parted which does two builds with
     different CFLAGS.
+  * dh_makeshlibs: Suggest/Document that --no-add-udeb can be
+    relevant for some udebs where the shared library for the udeb
+    is embedded in a different package (e.g. the main udeb
+    package).  Thanks to Nicolas Braud-Santoni for reporting the
+    issue.  (Closes: #942454)
 
   [ Helmut Grohne ]:
   * cmake buildsystem: Fix CMAKE_SYSTEM_PROCESSOR for 32bit arms.
