d/changelog: Fix typos
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
 debhelper (12.7) UNRELEASED; urgency=medium
 
   [ Niels Thykier ]:
-  * dh_installman: Avoid error message when man-db is not unstalled
-    (only occurs in debhelper's own buid as man-db is a mandatory
+  * dh_installman: Avoid error message when man-db is not installed
+    (only occurs in debhelper's own build as man-db is a mandatory
     dependency).
   * dh_installman: Use man-recode(1) when available to massively
     speed up re-encoding performance for any package with a non-
