meson.pm: Fix broken call to NAME
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,8 @@ debhelper (12.7) UNRELEASED; urgency=medium
     is embedded in a different package (e.g. the main udeb
     package).  Thanks to Nicolas Braud-Santoni for reporting the
     issue.  (Closes: #942454)
+  * meson.pm: Fix invalid call under compat 13.  Thanks to
+    Jeremy Bicha for testing it.  (Closes: #942690)
 
   [ Helmut Grohne ]:
   * cmake buildsystem: Fix CMAKE_SYSTEM_PROCESSOR for 32bit arms.
