--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (12.7) UNRELEASED; urgency=medium
+debhelper (12.7) unstable; urgency=medium
 
   [ Niels Thykier ]:
   * dh_installman: Avoid error message when man-db is not installed
@@ -35,7 +35,7 @@ debhelper (12.7) UNRELEASED; urgency=medium
     + perl_build: run Build.PL and Build with host arch Config.pm
     + dh_perl: scan host arch include directories for Perl plugins
 
- -- Helmut Grohne <helmut@subdivi.de>  Fri, 27 Sep 2019 06:12:45 +0200
+ -- Niels Thykier <niels@thykier.net>  Sun, 20 Oct 2019 17:48:06 +0000
 
 debhelper (12.6.1) unstable; urgency=medium
 
