dh_installman: Correctly handle compressed manpages w. man-recode
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (12.7.1) UNRELEASED; urgency=medium
+
+  [ Colin Watson ]
+  * dh_installman: Correctly handle compressed manpages when
+    dh_installman uses man-recode.  (Closes: #943376)
+
+ -- Niels Thykier <niels@thykier.net>  Thu, 24 Oct 2019 19:17:40 +0000
+
 debhelper (12.7) unstable; urgency=medium
 
   [ Niels Thykier ]:
