--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-debhelper (12.7.1) UNRELEASED; urgency=medium
+debhelper (12.7.1) unstable; urgency=medium
 
   [ Colin Watson ]
   * dh_installman: Correctly handle compressed manpages when
     dh_installman uses man-recode.  (Closes: #943376)
 
- -- Niels Thykier <niels@thykier.net>  Thu, 24 Oct 2019 19:17:40 +0000
+ -- Niels Thykier <niels@thykier.net>  Sat, 26 Oct 2019 06:42:04 +0000
 
 debhelper (12.7) unstable; urgency=medium
 
