Describing debhelper compat level 13 changes for gradle-debian-helper.

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -1002,6 +1002,12 @@ by default).
 If you need them for B<*-indep> targets, you can add an explicit
 Build-Depends on B<dh-sequence-elf-tools>.
 
+=item -
+
+The third-party B<gradle> build system (from B<gradle-debian-helper>
+package) now runs the upstream-provided test suite automatically.  To
+suppress such behavior, override B<dh_auto_test>.
+
 =back
 
 =back
