--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (12.7.2) UNRELEASED; urgency=medium
+
+  * dh: Skip conditional dh sequence addons in the clean target.
+    This avoids FTBFS with conditional addons where the
+    build-dependency is not satisfied.  (Closes: #944225)
+
+ -- Niels Thykier <niels@thykier.net>  Sun, 17 Nov 2019 12:06:31 +0000
+
 debhelper (12.7.1) unstable; urgency=medium
 
   [ Colin Watson ]
