Updated German po4a translation
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,13 @@
 debhelper (12.7.2) UNRELEASED; urgency=medium
 
+  [ Niels Thykier ]
   * dh: Skip conditional dh sequence addons in the clean target.
     This avoids FTBFS with conditional addons where the
     build-dependency is not satisfied.  (Closes: #944225)
+
+  [ Translations ]
+  * Update German translation (Chris Leick)  (Closes: #943853)
+
 
  -- Niels Thykier <niels@thykier.net>  Sun, 17 Nov 2019 12:06:31 +0000
 
