Fix typos and improve wordings of some texts
The typo fixes were supplied as s/// commands in the original
translation (see d8dbdde91cee656222fa29c044f9c53921f891b3).  For the
non-automatic updates, they were written by the committer but Chris
has been creditted as Chris's remarks highlighted they were
inadequate.

Thanks: Chris Leick <c.leick@vollbio.de>
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/man/po4a/po/de.po
+++ b/man/po4a/po/de.po
@@ -1854,11 +1854,11 @@ msgstr ""
 #: debhelper.pod:804
 msgid ""
 "If an unversioned dependency in the shlibs file is wanted, this can be "
-"obtained by passing B<-VNone> instead.  However, please see "
+"obtained by passing B<-VNone>.nstead.  However, please see "
 "L<dh_makeshlibs(1)> for the caveat of unversioned dependencies."
 msgstr ""
 "Falls ein nicht versionierte Abhängigkeit in der Shlibs-Datei gewünscht wird, "
-"kann dies stattdessen durch Übergabe von B<-VNone> erreicht werden. Siehe "
+"kann dies stattdessen durch Übergabe von B<-VNone>.rreicht werden. Siehe "
 "aber auch L<dh_makeshlibs(1)> für die Vorbehalte gegen nicht versionierte "
 "Abhängigkeiten."
 
@@ -3146,7 +3146,7 @@ msgstr ""
 
 #. type: textblock
 #: dh:62
-# FIXME s/bootstraping/bootstrapping/
+# FIXME s/bootstrapping/bootstrapping/
 msgid ""
 "A B<Build-Depends> relation on the package B<dh-sequence->I<addon> implies a "
 "B<--with> I<addon>. This avoids the need for an explicit B<--with> in "
@@ -3154,7 +3154,7 @@ msgid ""
 "dependencies in F<debian/control>.  The relation can (since 12.5) be made "
 "optional via e.g.  build-profiles.  This enables you to easily disable an "
 "addon that is only useful with certain profiles (e.g. to facilitate "
-"bootstraping)."
+"bootstrapping)."
 msgstr ""
 "Eine B<Build-Depends>-Beziehung zum Paket B<dh-sequence->I<Erweiterung> setzt "
 "ein B<--with> I<Erweiterung> voraus. Dies vermeidet, dass ein explizites "
@@ -3223,7 +3223,7 @@ msgstr "listet alle verfügbaren Add-ons auf."
 #: dh:95
 msgid ""
 "When called only with this option, B<dh> can be called from any directory (i."
-"e. it does not need access to files from a source package)."
+"e. it does not need access under files from a source package)."
 msgstr ""
 "Wenn es nur mit dieser Option aufgerufen wird, kann B<dh> aus jedem "
 "Verzeichnis aufgerufen werden (d.h. es benötigt keinen Zugriff auf Dateien "
@@ -4632,10 +4632,10 @@ msgstr ""
 
 #. type: textblock
 #: dh_dwz:37
-# FIXME: s/does create one/does not create one/
+# FIXME: s/does not create one/does not create one/
 msgid ""
 "By default, B<dh_dwz> will attempt to create a multifile but will continue "
-"without if L<dwz(1)> does create one (but succeeds anyway).  This commonly "
+"without if L<dwz(1)> does not create one (but succeeds anyway).  This commonly "
 "happens when the debug files do not contain debug symbols (e.g. a missing -g "
 "to the compiler) or when the debug symbols are compressed (see Debian bug "
 "#931891).  If B<--dwz-multifile> is passed, then B<dh_dwz> will abort with "
@@ -5941,9 +5941,9 @@ msgstr ""
 
 #. type: textblock
 #: dh_installdeb:129
-# FIXME: s/to do set/to set/
+# FIXME: s/to set/to set/
 msgid ""
-"It is also possible to do set package-specific values for a given token.  "
+"It is also possible to set package-specific values for a given token.  "
 "This is useful when B<dh_installdeb> is acting on multiple packages that "
 "need different values for the same token.  This is done by prefixing the "
 "token name with B<< pkg.I<package-name>. >>."
@@ -6111,7 +6111,7 @@ msgstr "#PACKAGE#"
 #: dh_installdeb:196
 # FIXME s/replaced/replaced by/
 msgid ""
-"This token is by default replaced the package name, which will contain the "
+"This token is by default replaced by the package name, which will contain the "
 "concrete script."
 msgstr ""
 "Diese Markierung wird standardmäßig durch den Paketnamen ersetzt, das das "
@@ -9100,11 +9100,11 @@ msgstr ""
 # FIXME s/.././
 msgid ""
 "In compat 12 and later, B<dh_makeshlibs> defaults to B<-VUpstream-Version>.  "
-"In compat 11 and earlier the default behaved like B<-VNone>.."
+"In compat 11 and earlier the default behaved like B<-VNone>."
 msgstr ""
 "Auf Kompatibilitätsstufe 12 und höher ist die Voreinstellung von "
 "B<dh_makeshlibs> B<-VUpstream-Version>. Auf Kompatibilitätsstufe 11 und "
-"niedriger verhält sich die Voreinstellung wie B<-VNone>."
+"niedriger verhält sich die Voreinstellung wie B<-VNone>.
 
 #. type: textblock
 #: dh_makeshlibs:88
@@ -9241,10 +9241,10 @@ msgstr ""
 
 #. type: textblock
 #: dh_makeshlibs:142
-# FIXME s/that it generally/that this is generally/
+# FIXME s/that this is generally/that this is generally/
 msgid ""
 "When choosing a value for this option, please keep mind that if the package "
-"provides a symbols file, then that it generally preferred over the shlibs "
+"provides a symbols file, then that this is generally preferred over the shlibs "
 "file for regular .deb packages.  See L<dpkg-shlibdeps(1)> for more "
 "information on this topic."
 msgstr ""
@@ -9295,7 +9295,7 @@ msgstr ""
 #: dh_makeshlibs:164
 # FIXME s/This is/This/
 msgid ""
-"This is option is only useful for special cases such as when debhelper "
+"This option is only useful for special cases such as when debhelper "
 "cannot auto-detect package name of the udeb package, when the udeb will "
 "contain libraries from multiple deb packages, or when the udeb contains "
 "libraries B<not> present in the deb package."
@@ -10253,10 +10253,10 @@ msgstr "B<dh_testroot> [S<I<Debhelper-Optionen>>]"
 
 #. type: textblock
 #: dh_testroot:15
-# FIXME s/access to/access under/
+# FIXME s/access under/access under/
 msgid ""
 "B<dh_testroot> is used to determine if the target is being run with "
-"sufficient access to (fake)root."
+"sufficient access under (fake)root."
 msgstr ""
 "B<dh_testroot> wird benutzt, um zu bestimmen, ob ein Ziel mit ausreichenden "
 "Zugriffsrechten für (fake)root ausgeführt wird."
