--- a/man/po4a/po/es.po
+++ b/man/po4a/po/es.po
@@ -1865,7 +1865,7 @@ msgstr ""
 #: debhelper.pod:844
 msgid ""
 "If an unversioned dependency in the shlibs file is wanted, this can be "
-"obtained by passing B<-VNone> instead.  However, please see "
+"obtained by passing B<-VNone>.nstead.  However, please see "
 "L<dh_makeshlibs(1)> for the caveat of unversioned dependencies."
 msgstr ""
 
@@ -3097,7 +3097,7 @@ msgid ""
 "dependencies in F<debian/control>.  The relation can (since 12.5) be made "
 "optional via e.g.  build-profiles.  This enables you to easily disable an "
 "addon that is only useful with certain profiles (e.g. to facilitate "
-"bootstraping)."
+"bootstrapping)."
 msgstr ""
 
 #. type: textblock
@@ -3146,7 +3146,7 @@ msgstr "Lista todas las extensiones disponibles."
 #: dh:95
 msgid ""
 "When called only with this option, B<dh> can be called from any directory (i."
-"e. it does not need access to files from a source package)."
+"e. it does not need access under files from a source package)."
 msgstr ""
 
 #. type: textblock
@@ -4618,7 +4618,7 @@ msgstr ""
 #: dh_dwz:37
 msgid ""
 "By default, B<dh_dwz> will attempt to create a multifile but will continue "
-"without if L<dwz(1)> does create one (but succeeds anyway).  This commonly "
+"without if L<dwz(1)> does not create one (but succeeds anyway).  This commonly "
 "happens when the debug files do not contain debug symbols (e.g. a missing -g "
 "to the compiler) or when the debug symbols are compressed (see Debian bug "
 "#931891).  If B<--dwz-multifile> is passed, then B<dh_dwz> will abort with "
@@ -5971,7 +5971,7 @@ msgstr ""
 #. type: textblock
 #: dh_installdeb:129
 msgid ""
-"It is also possible to do set package-specific values for a given token.  "
+"It is also possible to set package-specific values for a given token.  "
 "This is useful when B<dh_installdeb> is acting on multiple packages that "
 "need different values for the same token.  This is done by prefixing the "
 "token name with B<< pkg.I<package-name>. >>."
@@ -6096,7 +6096,7 @@ msgstr ""
 #. type: textblock
 #: dh_installdeb:196
 msgid ""
-"This token is by default replaced the package name, which will contain the "
+"This token is by default replaced by the package name, which will contain the "
 "concrete script."
 msgstr ""
 
@@ -9310,7 +9310,7 @@ msgstr ""
 #: dh_makeshlibs:85
 msgid ""
 "In compat 12 and later, B<dh_makeshlibs> defaults to B<-VUpstream-Version>.  "
-"In compat 11 and earlier the default behaved like B<-VNone>.."
+"In compat 11 and earlier the default behaved like B<-VNone>."
 msgstr ""
 
 #. type: textblock
@@ -9437,7 +9437,7 @@ msgstr ""
 #: dh_makeshlibs:142
 msgid ""
 "When choosing a value for this option, please keep mind that if the package "
-"provides a symbols file, then that it generally preferred over the shlibs "
+"provides a symbols file, then that this is generally preferred over the shlibs "
 "file for regular .deb packages.  See L<dpkg-shlibdeps(1)> for more "
 "information on this topic."
 msgstr ""
@@ -9482,7 +9482,7 @@ msgstr ""
 #. type: textblock
 #: dh_makeshlibs:164
 msgid ""
-"This is option is only useful for special cases such as when debhelper "
+"This option is only useful for special cases such as when debhelper "
 "cannot auto-detect package name of the udeb package, when the udeb will "
 "contain libraries from multiple deb packages, or when the udeb contains "
 "libraries B<not> present in the deb package."
@@ -10524,7 +10524,7 @@ msgstr "B<dh_testroot> [S<I<opciones-de-debhelper>>]"
 #: dh_testroot:15
 msgid ""
 "B<dh_testroot> is used to determine if the target is being run with "
-"sufficient access to (fake)root."
+"sufficient access under (fake)root."
 msgstr ""
 
 #. type: textblock
