--- a/man/po4a/po/fr.po
+++ b/man/po4a/po/fr.po
@@ -2016,11 +2016,11 @@ msgstr ""
 #: debhelper.pod:844
 msgid ""
 "If an unversioned dependency in the shlibs file is wanted, this can be "
-"obtained by passing B<-VNone> instead.  However, please see "
+"obtained by passing B<-VNone>.nstead.  However, please see "
 "L<dh_makeshlibs(1)> for the caveat of unversioned dependencies."
 msgstr ""
 "Si une dépendance non versionnée est requise, cela peut être obtenu en "
-"passant B<-VNone> à la place. Veuillez tout de même consulter "
+"passant B<-VNone>. la place. Veuillez tout de même consulter "
 "L<dh_makeshlibs(1)> pour l'utilisation des dépendances non versionnées."
 
 # type: =item
@@ -3363,7 +3363,7 @@ msgid ""
 "dependencies in F<debian/control>.  The relation can (since 12.5) be made "
 "optional via e.g.  build-profiles.  This enables you to easily disable an "
 "addon that is only useful with certain profiles (e.g. to facilitate "
-"bootstraping)."
+"bootstrapping)."
 msgstr ""
 "Une relation B<Build-Depends> sur le paquet B<dh-sequence->I<rajout> "
 "implique B<--with> I<rajout>. Cela évite un B<--with> explicite dans "
@@ -3421,7 +3421,7 @@ msgstr "Liste tous les rajouts disponibles."
 #: dh:95
 msgid ""
 "When called only with this option, B<dh> can be called from any directory (i."
-"e. it does not need access to files from a source package)."
+"e. it does not need access under files from a source package)."
 msgstr ""
 "Lorsqu'il est appelé uniquement avec cette option, B<dh> peut être invoqué "
 "depuis n'importe quel répertoire (c'est-à-dire qu'il ne nécessite aucun "
@@ -4966,7 +4966,7 @@ msgstr ""
 #: dh_dwz:37
 msgid ""
 "By default, B<dh_dwz> will attempt to create a multifile but will continue "
-"without if L<dwz(1)> does create one (but succeeds anyway).  This commonly "
+"without if L<dwz(1)> does not create one (but succeeds anyway).  This commonly "
 "happens when the debug files do not contain debug symbols (e.g. a missing -g "
 "to the compiler) or when the debug symbols are compressed (see Debian bug "
 "#931891).  If B<--dwz-multifile> is passed, then B<dh_dwz> will abort with "
@@ -6352,7 +6352,7 @@ msgstr ""
 #. type: textblock
 #: dh_installdeb:129
 msgid ""
-"It is also possible to do set package-specific values for a given token.  "
+"It is also possible to set package-specific values for a given token.  "
 "This is useful when B<dh_installdeb> is acting on multiple packages that "
 "need different values for the same token.  This is done by prefixing the "
 "token name with B<< pkg.I<package-name>. >>."
@@ -6477,7 +6477,7 @@ msgstr ""
 #. type: textblock
 #: dh_installdeb:196
 msgid ""
-"This token is by default replaced the package name, which will contain the "
+"This token is by default replaced by the package name, which will contain the "
 "concrete script."
 msgstr ""
 
@@ -9778,10 +9778,10 @@ msgstr ""
 #: dh_makeshlibs:85
 msgid ""
 "In compat 12 and later, B<dh_makeshlibs> defaults to B<-VUpstream-Version>.  "
-"In compat 11 and earlier the default behaved like B<-VNone>.."
+"In compat 11 and earlier the default behaved like B<-VNone>."
 msgstr ""
 "Depuis la version 12, B<dh_makeshlibs> utilise B<-VUpstream-Version> par "
-"défaut. Jusqu'à la version 11, le comportement par défaut imitait B<-VNone>."
+"défaut. Jusqu'à la version 11, le comportement par défaut imitait B<-VNone>.
 
 #. type: textblock
 #: dh_makeshlibs:88
@@ -9919,7 +9919,7 @@ msgstr ""
 #: dh_makeshlibs:142
 msgid ""
 "When choosing a value for this option, please keep mind that if the package "
-"provides a symbols file, then that it generally preferred over the shlibs "
+"provides a symbols file, then that this is generally preferred over the shlibs "
 "file for regular .deb packages.  See L<dpkg-shlibdeps(1)> for more "
 "information on this topic."
 msgstr ""
@@ -9972,7 +9972,7 @@ msgstr ""
 #. type: textblock
 #: dh_makeshlibs:164
 msgid ""
-"This is option is only useful for special cases such as when debhelper "
+"This option is only useful for special cases such as when debhelper "
 "cannot auto-detect package name of the udeb package, when the udeb will "
 "contain libraries from multiple deb packages, or when the udeb contains "
 "libraries B<not> present in the deb package."
@@ -11024,7 +11024,7 @@ msgstr "B<dh_testroot> [I<options_de_debhelper>]"
 #: dh_testroot:15
 msgid ""
 "B<dh_testroot> is used to determine if the target is being run with "
-"sufficient access to (fake)root."
+"sufficient access under (fake)root."
 msgstr ""
 "B<dh_testroot> est utilisé pour déterminer si la cible est exécutée avec des "
 "accès suffisants à (fake)root."
@@ -11758,7 +11758,7 @@ msgstr ""
 #~ msgstr "B<dh_makeshlibs>"
 
 #~ msgid ""
-#~ "B<dh_testroot> is used to determine if the package has access to at least "
+#~ "B<dh_testroot> is used to determine if the package has access under at least "
 #~ "the level of root access that it declared it needed via the Rules-"
 #~ "Requires-Root (R³) field."
 #~ msgstr ""
