po: Fix some translations corrupted by bad sed call
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/man/po4a/po/de.po
+++ b/man/po4a/po/de.po
@@ -1948,7 +1948,7 @@ msgid ""
 "L<dh_makeshlibs(1)> for the caveat of unversioned dependencies."
 msgstr ""
 "Falls ein nicht versionierte Abhängigkeit in der Shlibs-Datei gewünscht "
-"wird, kann dies stattdessen durch Übergabe von B<-VNone>.rreicht werden. "
+"wird, kann dies stattdessen durch Übergabe von B<-VNone> erreicht werden. "
 "Siehe aber auch L<dh_makeshlibs(1)> für die Vorbehalte gegen nicht "
 "versionierte Abhängigkeiten."
 
