--- a/man/po4a/po/fr.po
+++ b/man/po4a/po/fr.po
@@ -2025,7 +2025,7 @@ msgid ""
 "L<dh_makeshlibs(1)> for the caveat of unversioned dependencies."
 msgstr ""
 "Si une dépendance non versionnée est requise, cela peut être obtenu en "
-"passant B<-VNone>. la place. Veuillez tout de même consulter "
+"passant B<-VNone> à la place. Veuillez tout de même consulter "
 "L<dh_makeshlibs(1)> pour l'utilisation des dépendances non versionnées."
 
 # type: =item
