--- a/man/po4a/po/pt.po
+++ b/man/po4a/po/pt.po
@@ -1920,7 +1920,7 @@ msgid ""
 "L<dh_makeshlibs(1)> for the caveat of unversioned dependencies."
 msgstr ""
 "Se é pedida uma dependência sem versão no ficheiros shlibs, isto pode ser "
-"conseguido ao passar B<-VNone>.m substituição. No entanto, por favor veja "
+"conseguido ao passar B<-VNone> em substituição. No entanto, por favor veja "
 "L<dh_makeshlibs(1)> para a  problemática das dependências sem versão."
 
 #. type: textblock
