de.po: Fix missing closing tag
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/man/po4a/po/de.po
+++ b/man/po4a/po/de.po
@@ -1861,7 +1861,7 @@ msgstr ""
 "Dokumentation« (ab hier I<Hauptdokumentationspaket> genannt) für jedes I<-"
 "doc>-Paket zu bestimmen. Falls sie ein derartiges "
 "I<Hauptdokumentationspaket> finden, werden sie nun die Dokumentation in den "
-"Pfad F<< /usr/share/doc/I<Hauptdokumentationspaket> im angegebenen "
+"Pfad F<< /usr/share/doc/I<Hauptdokumentationspaket> >> im angegebenen "
 "Dokumentationspaket installieren. D.h. der Pfad kann sich ändern, aber die "
 "Dokumentation wird immer noch im I<-doc>-Paket mitgeliefert."
 
