--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,9 @@ debhelper (12.7.2) UNRELEASED; urgency=medium
   * dh: Skip conditional dh sequence addons in the clean target.
     This avoids FTBFS with conditional addons where the
     build-dependency is not satisfied.  (Closes: #944225)
+  * meson.pm: Fix bug where dh_auto_test would break horribly
+    under compat 13 due to an unitialized variable.  Thanks to
+    Benjamin Jacobs for reporting the issue.  (Closes: #945149)
 
   [ Translations ]
   * Update German translation (Chris Leick)  (Closes: #943853)
