--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,10 @@ debhelper (12.7.2) UNRELEASED; urgency=medium
     under compat 13 due to an unitialized variable.  Thanks to
     Benjamin Jacobs for reporting the issue.  (Closes: #945149)
 
+  [ Andrius Merkys ]
+  * debhelper.pod: Document chagnes to the gradle third-party
+    build system in compat 13.
+
   [ Translations ]
   * Update German translation (Chris Leick)  (Closes: #943853)
 
