--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,13 @@ debhelper (12.7.2) UNRELEASED; urgency=medium
   * meson.pm: Fix bug where dh_auto_test would break horribly
     under compat 13 due to an unitialized variable.  Thanks to
     Benjamin Jacobs for reporting the issue.  (Closes: #945149)
+  * dh_installman: Fix non-deterministic behaviour when there
+    multiple definitions of the same manpage in a package.
+    In compat 13, this is resolved by aborting with an error.
+    In older compat levels, dh_installman will deterministically
+    pick a canonical version (via sort) along with emitting a
+    warning.  Thanks to Colin Watson for reporting the issue.
+    (Closes: #943705)
 
   [ Andrius Merkys ]
   * debhelper.pod: Document chagnes to the gradle third-party
