d/changelog: Fix typo
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,7 +5,7 @@ debhelper (12.7.2) UNRELEASED; urgency=medium
     This avoids FTBFS with conditional addons where the
     build-dependency is not satisfied.  (Closes: #944225)
   * meson.pm: Fix bug where dh_auto_test would break horribly
-    under compat 13 due to an unitialized variable.  Thanks to
+    under compat 13 due to an uninitialized variable.  Thanks to
     Benjamin Jacobs for reporting the issue.  (Closes: #945149)
   * dh_installman: Fix non-deterministic behaviour when there
     multiple definitions of the same manpage in a package.
