--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,8 @@ debhelper (12.7.2) UNRELEASED; urgency=medium
     ccache is installed but not configured/used explicitly.
     Thanks to Simon McVittie for reporting the issue.
     (Closes: #933799)
+  * d/control: Bump Standards-Versions to 4.4.1 - no changes
+    required.
 
   [ Andrius Merkys ]
   * debhelper.pod: Document chagnes to the gradle third-party
