--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (12.7.2) UNRELEASED; urgency=medium
+debhelper (12.7.2) unstable; urgency=medium
 
   [ Niels Thykier ]
   * dh: Skip conditional dh sequence addons in the clean target.
@@ -35,7 +35,7 @@ debhelper (12.7.2) UNRELEASED; urgency=medium
   * Update German translation (Chris Leick)  (Closes: #943853)
 
 
- -- Niels Thykier <niels@thykier.net>  Sun, 17 Nov 2019 12:06:31 +0000
+ -- Niels Thykier <niels@thykier.net>  Sat, 07 Dec 2019 17:44:32 +0000
 
 debhelper (12.7.1) unstable; urgency=medium
 
