d/changelog: Fix typo
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -28,7 +28,7 @@ debhelper (12.7.2) unstable; urgency=medium
     required.
 
   [ Andrius Merkys ]
-  * debhelper.pod: Document chagnes to the gradle third-party
+  * debhelper.pod: Document changes to the gradle third-party
     build system in compat 13.
 
   [ Translations ]
