Fix day-of-week for changelog entry 4.0.0.
Fixes lintian: debian-changelog-has-wrong-day-of-week
See https://lintian.debian.org/tags/debian-changelog-has-wrong-day-of-week.html for more details.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (12.7.3) UNRELEASED; urgency=medium
+
+  * Fix day-of-week for changelog entry 4.0.0.
+
+ -- Debian Janitor <janitor@jelmer.uk>  Thu, 19 Dec 2019 04:44:18 +0000
+
 debhelper (12.7.2) unstable; urgency=medium
 
   [ Niels Thykier ]
@@ -6954,7 +6960,7 @@ debhelper (4.0.0) unstable; urgency=low
     for woody should continue to use whatever compatibility level they are
     using.)
 
- -- Joey Hess <joeyh@debian.org>  Tue, 11 Apr 2002 17:28:57 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu, 11 Apr 2002 17:28:57 -0400
 
 debhelper (3.4.14) unstable; urgency=low
 
