dh_perl: Use perl:any for perl module in addition to perl programs
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,11 @@
 debhelper (12.7.3) UNRELEASED; urgency=medium
 
+  [ Niels Thykier ]
+  * dh_perl: Use perl:any for perl module in addition to perl
+    programs.  Thanks to Helmut Grohne and Niko Tyni for the
+    suggestion and analysis.  (Closes: #946655)
+
+  [ Debian Janitor ]
   * Fix day-of-week for changelog entry 4.0.0.
 
  -- Debian Janitor <janitor@jelmer.uk>  Thu, 19 Dec 2019 04:44:18 +0000
