lintian-overrides: Override no-dh-sequencer
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ debhelper (12.7.3) UNRELEASED; urgency=medium
     packages.  It is irrelevant as the original binary will
     have the field plus the field can cause lintian warnings.
     (Closes: #947506)
+  * lintian-overrides: Override no-dh-sequencer as it is a
+    false-positive that lintian cannot be expected to know.
 
   [ Debian Janitor ]
   * Fix day-of-week for changelog entry 4.0.0.
