--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (12.7.3) UNRELEASED; urgency=medium
+debhelper (12.7.3) unstable; urgency=medium
 
   [ Niels Thykier ]
   * dh_perl: Use perl:any for perl module in addition to perl
@@ -14,7 +14,7 @@ debhelper (12.7.3) UNRELEASED; urgency=medium
   [ Debian Janitor ]
   * Fix day-of-week for changelog entry 4.0.0.
 
- -- Debian Janitor <janitor@jelmer.uk>  Thu, 19 Dec 2019 04:44:18 +0000
+ -- Niels Thykier <niels@thykier.net>  Sun, 29 Dec 2019 17:59:47 +0000
 
 debhelper (12.7.2) unstable; urgency=medium
 
