--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (12.7.4) UNRELEASED; urgency=medium
+
+  * Dh_Lib.pm: Simplify internal loggning of which commands
+    have been run.  We are no longer interested in whether
+    it was an override target or not.
+
+ -- Niels Thykier <niels@thykier.net>  Wed, 15 Jan 2020 21:04:25 +0000
+
 debhelper (12.7.3) unstable; urgency=medium
 
   [ Niels Thykier ]
