warn about missing perl-xs-dev for perl_* build systems
When Niko Tyni added cross support to the perl build systems, the
perl_cross_incdir warned about a missing perl-xs-dev. That turned out to
be annoying for a lot of non-perl packages, because dh_perl was emitting
the warning. Therefore, we removed it. However, the warning really is
useful in some cases. Add it back specifically when a perl_* buildsystem
is in use. That should have a better signal/noise ratio.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
 debhelper (12.7.4) UNRELEASED; urgency=medium
 
+  [ Niels Thykier ]
   * Dh_Lib.pm: Simplify internal loggning of which commands
     have been run.  We are no longer interested in whether
     it was an override target or not.
+
+  [ Helmut Grohne ]
+  * Warn about missing perl-xs-dev for perl_* buildsystems.
 
  -- Niels Thykier <niels@thykier.net>  Wed, 15 Jan 2020 21:04:25 +0000
 
