dh: Reset umask to 0022
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,9 @@ debhelper (12.8) UNRELEASED; urgency=medium
   * dh: Detect and warn about override and hook targets
     for known obsolete commands.  In compat 13, this will
     be an error instead of a warning.
+  * dh: Reset umask to 0022 as a consistent default value.
+    Thanks to Thorsten Glaser for the suggestion.
+    (Closes: #944691)
 
   [ Helmut Grohne ]
   * Warn about missing perl-xs-dev for perl_* buildsystems.
